--- a/project_vs2017/wots.vcxproj
+++ b/project_vs2017/wots.vcxproj
@@ -32,7 +32,7 @@
     <ClInclude Include="..\framework\scene.hpp" />
     <ClInclude Include="..\game_cpp\aircraft.hpp" />
     <ClInclude Include="..\game_cpp\ship.hpp" />
-    <ClInclude Include="..\game_cpp\traits.hpp" />
+    <ClInclude Include="..\game_cpp\utils.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
